[project]
name = "yunetas"
version = "0.1.0"
description = "Terminal User Interface of Yunetas"
authors = [
    {name = "rmm", email = "rosa.martinez@artgins.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
