[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
yunetas = "yunetas.main:run"

[project]
name = "yunetas"
version = "0.1.0"
description = "TUI (Terminal User Interface) of Yunetas"
authors = [
    {name = "rmm", email = "rosa.martinez@artgins.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
